--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,12 @@
 @font-face {
   font-family: 'Futura';
   src: url("/fonts/futura-medium-bt.ttf");
+  font-display: swap;
 }
 
 html,
 body {
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
