--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,8 +43,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  scroll-behavior: smooth;
 }
-
 /* body {
   overscroll-behavior-y: none;
 } */
